# topicos1-projeto2-rede-mlp-com-pytorch

./: README.md  Topicos1-2026.1-Tarefa2.ipynb  pyproject.toml
