[project]
name = "topicos1-projeto2-rede-mlp-com-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "polars>=1.39.0",
    "prettytable>=3.17.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]
